<abbr> element: Restored border-bottom-width: 0; normalize.css fix:
This is in fact needed but only shows up at certain screen sizes,
probably due to the text-decoration overlapping it at other sizes making
it not render.

See commmit 6348890bdc2c6e0b45ab274858eacffc9cda228f

--- a/stylesheets/elements/abbr.scss
+++ b/stylesheets/elements/abbr.scss
@@ -12,6 +12,9 @@
 
   @include abbr.abbr {
 
+    // Remove the normalize.css border bottom.
+    border-bottom-width: 0;
+
     cursor: help;
 
     text-decoration-style:      dotted;
